fix(sidebar): Align bottom section to bottom

--- a/assets/scss/partials/menu.scss
+++ b/assets/scss/partials/menu.scss
@@ -166,6 +166,10 @@
         margin: 0;
     }
 
+    li:last-of-type {
+        margin-top: auto;
+    }
+
     li {
         position: relative;
         vertical-align: middle;
